@@ -13,6 +13,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Option host_application="-p TEST_NEW_IO.prv /home/jgonzale/Tests/DIMEMAS_HOPSA_TESTS/REGULAR/BT.4/MN.64.1ppn.DIM.NEW.cfg" />
+				<Option run_host_application_in_terminal="0" />
 				<Compiler>
 					<Add option="-O2" />
 				</Compiler>
@@ -86,9 +87,6 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="Simulator/input/file_data_access.h" />
-		<Unit filename="Simulator/input/lex.c">
-			<Option compilerVar="CC" />
-		</Unit>
 		<Unit filename="Simulator/input/lex.l" />
 		<Unit filename="Simulator/input/read.c">
 			<Option compilerVar="CC" />
@@ -100,10 +98,6 @@
 		<Unit filename="Simulator/input/sddf.h" />
 		<Unit filename="Simulator/input/sddf_records.h" />
 		<Unit filename="Simulator/input/ts.h" />
-		<Unit filename="Simulator/input/yacc.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="Simulator/input/yacc.h" />
 		<Unit filename="Simulator/input/yacc.y" />
 		<Unit filename="Simulator/io/dimemas_io.c">
 			<Option compilerVar="CC" />
@@ -136,10 +130,6 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="Simulator/model/machine.h" />
-		<Unit filename="Simulator/model/mem_links.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="Simulator/model/mem_links.h" />
 		<Unit filename="Simulator/model/memory.c">
 			<Option compilerVar="CC" />
 		</Unit>
